## CHANGES
---
## Update v.0.7.1
* Added parameter for mass defect -D to command line argument for riana integrate. See documentation for detail
* Added the flag -p to the command line argument for riana fit, which toggles plotting fitted curves
* Added the fag -w to the command line argument for riana integrate, for writing out pre-integration intensities


## Update v.0.7.0
* RIANA now supports a Snakemake pipeline that performs protein database search, filtering, integration and fitting
* Added native support to perform curve-fitting and output best-fit curve plots
* Added support for one-pool, two-compartment (Guan et al.) and three-exponent (Fornasiero et al.) models
* Match between runs is temporarily disabled to support the Snakemake workflow and will return in a later version.

## Update v.0.6.4
* Added support for standalone Percolator results for v.3.0.5.
* Organize the project in identical manner, include one psms.txt for target psms (output of Percolator -m tag) in each percolator folder.
* When using standalone Percolator dist, peptide masses are calculated de novo
* Toggle match between runs using --mbr or -b
* No longer writes results of individual fractions separately.

## Update v.0.6.3
* Fixed an issue where mbr all-NaN slice causes an error
* Changed project directory structure so that mzml files have to be within an mzml subfolder and percolator files
are in the percolator folder

## Update v.0.6.0
* Started implementation of match between runs and restructured project for distribution via pip

## Update v.0.5.0

* Updated to use pymzml 2.2.
* Multi-threading is now supported with the --thread argument.
* RIANA now loads all the spectra needed for integration into memory.
* Compared to v.0.4.0 there should now be a substantial speed gain and can finish a sizeable fraction (~1 Gb raw file) in 10 min.
* User-definable mass tolerance for MS1 integration is now supported via the --masstolerance argument [default 100 ppm].

## Update v.0.4.0
