@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Edward Lau">
-<meta name="dcterms.date" content="2022-10-31">
+<meta name="dcterms.date" content="2023-04-25">
 <meta name="keywords" content="Protein turnover, Proteomics, Mass spectrometry">
 <meta name="description" content="RIANA enables protein turnover data analysis from mass spectrometry-based proteomics experiments. Supports multiple labeling strategies, including labeled amino acid and heavy water.">
 
@@ -125,7 +125,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <link rel="stylesheet" href="styles.css">
 <meta property="og:title" content="RIANA v0.7.1 - Quick Start">
 <meta property="og:description" content="RIANA enables protein turnover data analysis from mass spectrometry-based proteomics experiments. Supports multiple labeling strategies, including labeled amino acid and heavy water.">
-<meta property="og:image" content="https://github.com/ed-lau/jcast/images/jellyfish.png">
+<meta property="og:image" content="https://github.com/ed-lau/jcast/images/riana_logo.png">
 <meta property="og:site-name" content="RIANA v0.7.1">
 <meta property="og:image:height" content="1034">
 <meta property="og:image:width" content="2550">
@@ -219,7 +219,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 31, 2022</p>
+      <p class="date">April 25, 2023</p>
     </div>
   </div>
     
