@@ -2,22 +2,22 @@
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
   <url>
     <loc>https://github.com/ed-lau/jcast/change.html</loc>
-    <lastmod>2022-10-31T19:53:52.919Z</lastmod>
+    <lastmod>2023-04-26T02:06:02.129Z</lastmod>
   </url>
   <url>
     <loc>https://github.com/ed-lau/jcast/faqs.html</loc>
-    <lastmod>2022-10-31T19:53:54.351Z</lastmod>
+    <lastmod>2023-04-26T02:06:02.949Z</lastmod>
   </url>
   <url>
     <loc>https://github.com/ed-lau/jcast/index.html</loc>
-    <lastmod>2022-10-31T19:53:55.754Z</lastmod>
+    <lastmod>2023-04-26T02:06:03.755Z</lastmod>
   </url>
   <url>
     <loc>https://github.com/ed-lau/jcast/install.html</loc>
-    <lastmod>2022-10-31T19:53:57.246Z</lastmod>
+    <lastmod>2023-04-26T02:06:04.607Z</lastmod>
   </url>
   <url>
     <loc>https://github.com/ed-lau/jcast/about.html</loc>
-    <lastmod>2022-10-31T19:53:58.818Z</lastmod>
+    <lastmod>2023-04-26T02:06:05.443Z</lastmod>
   </url>
 </urlset>
