@@ -1,10 +1,17 @@
 ## CHANGES
 ---
+
+## Update v.0.7.3
+* Added graphical user interface (GUI) for RIANA. To use the GUI, run `riana/riana_ui.py` in the command line.
+
+## Update v.0.7.2
+* Included additional Snakemake options in the config files
+* The argument for isotope now takes in multiple numerical values separated by space e.g., 2 4 6 8
+
 ## Update v.0.7.1
 * Added parameter for mass defect -D to command line argument for riana integrate. See documentation for detail
 * Added the flag -p to the command line argument for riana fit, which toggles plotting fitted curves
 * Added the fag -w to the command line argument for riana integrate, for writing out pre-integration intensities
-
 
 ## Update v.0.7.0
 * RIANA now supports a Snakemake pipeline that performs protein database search, filtering, integration and fitting
